Changed a few css properties to look correct on IE11. Added a README

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,7 +7,7 @@
 .game {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-around;
   width: 450px;
   height: 450px;
   background: #006400;
@@ -20,6 +20,7 @@
   opacity: 0.9;
   width: 100%;
   height: 100%;
+  top: 0;
 }
 
 .banner {
@@ -33,6 +34,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  top: 40%;
 }
 
 h2, h3 {
@@ -45,7 +47,7 @@ button {
 
 .row {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .hole {
